# cmake-tutorial

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  tutorial.cxx
MathFunctions/: CMakeLists.txt  MakeTable.cmake  MathFunctions.cxx  MathFunctions.h  mysqrt.cxx
